Fix Bug 37029 : Legend box jumps around

--- a/Interwiki.css
+++ b/Interwiki.css
@@ -39,3 +39,7 @@ input#mw-interwiki-url {
 .mw-special-Interwiki .mw-collapsible-toggle {
 	float: left;
 }
+
+.mw-collapsible-content {
+	clear: both;
+}
